--- a/index.html
+++ b/index.html
@@ -10,3 +10,52 @@
 <meta name="google-site-verification" content="X2QFrl-bPeg9AdlMt4VKT9v6MJUSTCf-SrY3CvKt4Zs" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>LIN Dan&#39;s Homepage</title>
+<!-- Google Analytics -->
+<script>
+(function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+(i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+})(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+
+ga('create', 'UA-159069803-1', 'auto');
+ga('send', 'pageview');
+</script>
+<!-- End Google Analytics -->
+<!--
+<script>
+  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  ga('create', 'UA-87320911-1', 'auto');
+  ga('send', 'pageview');
+</script>
+-->
+</head>
+<body>
+<div id="layout-content" style="margin-top:25px">
+<table>
+	<tbody>
+		<tr>
+			<td width="650">
+				<div id="toptitle">
+					<h1>LIN Dan</h1><h1>
+					<h1><font face="Arial"> 林丹 </font></h1>
+				</h1></div>
+
+				<h3>PhD Candidate</h3>
+				<p>
+					Bioinformatics <br>
+					City University of Hong Kong <br>
+					in collaboration with Cornell Universityg<br>
+					<br>
+					Email: dlinlin.1128@gmail.com
+				</p>
+				</p>
+			</td>
+			<td>
+				<img src="./pic/pic.jpg" border="0" width="220"><br>
+			</td>
+		</tr><tr>
+	</tr></tbody>
+</table>
