--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ga('send', 'pageview');
 				<p>
 					Bioinformatics <br>
 					City University of Hong Kong <br>
-					in collaboration with Cornell Universityg<br>
+					in collaboration with Cornell University<br>
 					<br>
 					Email: dlinlin.1128@gmail.com
 				</p>
@@ -59,3 +59,42 @@ ga('send', 'pageview');
 		</tr><tr>
 	</tr></tbody>
 </table>
+
+<h2>Biography </h2>
+<p>
+	I am currently a third-year PhD student in City University of Hong Kong
+	in collaboration with Cornell University’s College of Veterinary Medicine.
+	Before that, I got my master's degree at The Chinese University of Hong Kong,
+	and I attained my bachelor's degree from Shenzhen University.
+	My research interests include bioinformatics, metagenome and precision livestock farming.
+</p>
+	<h2>News</h2>
+<ul>
+
+	<li>
+		[11/2021] Our paper "Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats" has been accepted.
+	</li>
+	<li>
+		[09/2021] Our paper "Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa" has been accepted.
+	</li>
+	<li>
+		[09/2020] My undergraduate thesis project has been accepted.
+	</li>
+</ul>
+
+<h2><font face="Arial"> Selected Publications </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
+<table id="tbPublications" width="100%">
+	<tbody>
+
+	<tr>	
+		<td width="206">
+		</td>		
+		<td><b>Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</b> <br>
+		<b>Qiuwen He, Jiating Huang, Tingting Zheng, Dan Lin*</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
+		<p>(<i><b>Preprint</b></i>)<br>
+	        [<a href="https://academic.oup.com/femsec/article-abstract/97/12/fiab151/6430860?login=false">paper</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
