--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ga('send', 'pageview');
 				<p>
 					Bioinformatics <br>
 					City University of Hong Kong <br>
-					in collaboration with Cornell University<br>
+					co-supervised by Cornell University<br>
 					<br>
 					Email: dlinlin.1128@gmail.com
 				</p>
@@ -62,8 +62,8 @@ ga('send', 'pageview');
 
 <h2>Biography </h2>
 <p>
-	I am currently a third-year PhD student in City University of Hong Kong
-	in collaboration with Cornell University’s College of Veterinary Medicine.
+	I am currently a third-year PhD student in City University of Hong Kong,
+	co-supervised by Cornell University’s College of Veterinary Medicine.
 	Before that, I got my master's degree at The Chinese University of Hong Kong,
 	and I attained my bachelor's degree from Shenzhen University.
 	My research interests include bioinformatics, metagenome and precision livestock farming.
@@ -90,8 +90,8 @@ ga('send', 'pageview');
 		<td width="206">
 		</td>		
 		<td><b>Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</b> <br>
-		<b>Qiuwen He, Jiating Huang, Tingting Zheng, Dan Lin*</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
-		<p>(<i><b>Preprint</b></i>)<br>
+		Qiuwen He*, Jiating Huang*, Tingting Zheng, <b>Dan Lin*</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
+		<p>(<i><b>Paper</b></i>)<br>
 	        [<a href="https://academic.oup.com/femsec/article-abstract/97/12/fiab151/6430860?login=false">paper</a>]
 		</td>
 	</tr>
