--- a/index.html
+++ b/index.html
@@ -98,3 +98,68 @@ ga('send', 'pageview');
 	<tr></tr>
     <tr></tr>
     <tr></tr>
+		
+		
+	<tr>	
+		<td width="206">
+		</td>		
+		<td><b>Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa</b> <br>
+		<b>Dan Lin*</b>, Lan Lan*, Tingting Zheng, Peng Shi, Jinshan Xu, Jun Li<br>
+	        [<a href="https://academic.oup.com/gbe/article/13/10/evab227/6380142?login=false">paper</a>][<a href="https://github.com/lindan1128/Apis-Laboriosa-Project">code</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+		
+		
+	<tr>	
+		<td width="206">
+		</td>		
+		<td><b>Keratoconus Diagnosis: Validation of a Novel Parameter Set Derived from IOP-Matched Scenario</b> <br>
+		<b>Dan Lin*</b>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou<br>
+	        [<a href="https://www.hindawi.com/journals/joph/2020/6530279/">paper</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+		
+		
+	<tr>	
+		<td width="206">
+		</td>		
+		<td><b>PRSNet : Part Relation and Selection Network for Bone Age Assessment</b> <br>
+		Yuanfeng Ji, Hao Chen, <b>Dan Lin*</b>, Xiaohua Wu, Di Lin<br>
+	        [<a href="https://arxiv.org/abs/1909.05651">paper</a>][<a href="https://github.com/dingguo1996/RANet">code</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+		
+		
+	<tr>	
+		<td width="206">
+		</td>		
+		<td><b>Pre-impact Alarm System for Fall Detection Using MEMS Sensors and HMM-based SVM Classifier</b> <br>
+		Shengyun Liang, Tianyue Chu, <b>Dan Lin*</b>, Yunkun Ning, Huiqi Li, Guoru Zhao<br>
+	        [<a href="https://ieeexplore.ieee.org/document/8513119">paper</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+
+
+<p align=right>
+   <a class="pull-right" href=" ">
+   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=sjN32DQJNg-ersu1omfeQGDEj9WdB2f6k0I6ZmtjVSI"></script></center>
+   </ a>
+</p >
+
+<p><center><font>
+        <br>&copy; LIN Dan | Last updated: Jan. 2022</font></center>
+</p >
+
+</body></html>
