--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@ ga('send', 'pageview');
 		<td width="206">
 		</td>		
 		<td><b>Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</b> <br>
-		Qiuwen He*, Jiating Huang*, Tingting Zheng, <b>Dan Lin*</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
+		Qiuwen He*, Jiating Huang*, Tingting Zheng, <b>Dan Lin</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
 		<p>(<i><b>Paper</b></i>)<br>
 	        [<a href="https://academic.oup.com/femsec/article-abstract/97/12/fiab151/6430860?login=false">paper</a>]
 		</td>
@@ -130,7 +130,7 @@ ga('send', 'pageview');
 		<td width="206">
 		</td>		
 		<td><b>PRSNet : Part Relation and Selection Network for Bone Age Assessment</b> <br>
-		Yuanfeng Ji, Hao Chen, <b>Dan Lin*</b>, Xiaohua Wu, Di Lin<br>
+		Yuanfeng Ji, Hao Chen, <b>Dan Lin</b>, Xiaohua Wu, Di Lin<br>
 	        [<a href="https://arxiv.org/abs/1909.05651">paper</a>][<a href="https://github.com/dingguo1996/RANet">code</a>]
 		</td>
 	</tr>
@@ -143,7 +143,7 @@ ga('send', 'pageview');
 		<td width="206">
 		</td>		
 		<td><b>Pre-impact Alarm System for Fall Detection Using MEMS Sensors and HMM-based SVM Classifier</b> <br>
-		Shengyun Liang, Tianyue Chu, <b>Dan Lin*</b>, Yunkun Ning, Huiqi Li, Guoru Zhao<br>
+		Shengyun Liang, Tianyue Chu, <b>Dan Lin</b>, Yunkun Ning, Huiqi Li, Guoru Zhao<br>
 	        [<a href="https://ieeexplore.ieee.org/document/8513119">paper</a>]
 		</td>
 	</tr>
@@ -152,11 +152,6 @@ ga('send', 'pageview');
     <tr></tr>
 
 
-<p align=right>
-   <a class="pull-right" href=" ">
-   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=sjN32DQJNg-ersu1omfeQGDEj9WdB2f6k0I6ZmtjVSI"></script></center>
-   </ a>
-</p >
 
 <p><center><font>
         <br>&copy; LIN Dan | Last updated: Jan. 2022</font></center>
