--- a/index.html
+++ b/index.html
@@ -88,6 +88,7 @@ ga('send', 'pageview');
 
 	<tr>	
 		<td width="206">
+		<img src="pic/mix.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</b> <br>
 		Qiuwen He*, Jiating Huang*, Tingting Zheng, <b>Dan Lin</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
@@ -102,6 +103,7 @@ ga('send', 'pageview');
 		
 	<tr>	
 		<td width="206">
+		<img src="pic/apis.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa</b> <br>
 		<b>Dan Lin*</b>, Lan Lan*, Tingting Zheng, Peng Shi, Jinshan Xu, Jun Li<br>
@@ -115,6 +117,7 @@ ga('send', 'pageview');
 		
 	<tr>	
 		<td width="206">
+		<img src="pic/kero.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>Keratoconus Diagnosis: Validation of a Novel Parameter Set Derived from IOP-Matched Scenario</b> <br>
 		<b>Dan Lin*</b>, Lei Tian, Shu Zhang, Like Wang, Ying Jie, Yongjin Zhou<br>
@@ -128,6 +131,7 @@ ga('send', 'pageview');
 		
 	<tr>	
 		<td width="206">
+		<img src="pic/bone.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>PRSNet : Part Relation and Selection Network for Bone Age Assessment</b> <br>
 		Yuanfeng Ji, Hao Chen, <b>Dan Lin</b>, Xiaohua Wu, Di Lin<br>
@@ -141,6 +145,7 @@ ga('send', 'pageview');
 		
 	<tr>	
 		<td width="206">
+		<img src="pic/fall.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
 		</td>		
 		<td><b>Pre-impact Alarm System for Fall Detection Using MEMS Sensors and HMM-based SVM Classifier</b> <br>
 		Shengyun Liang, Tianyue Chu, <b>Dan Lin</b>, Yunkun Ning, Huiqi Li, Guoru Zhao<br>
