--- a/index.html
+++ b/index.html
@@ -158,6 +158,12 @@ ga('send', 'pageview');
 
 
 
+<p align=right>
+   <a class="pull-right" href=" ">
+   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=sjN32DQJNg-ersu1omfeQGDEj9WdB2f6k0I6ZmtjVSI"></script></center>
+   </ a>
+</p >
+
 <p><center><font>
         <br>&copy; LIN Dan | Last updated: Jan. 2022</font></center>
 </p >
