--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ga('send', 'pageview');
 	</li>
 </ul>
 
-<h2><font face="Arial"> Selected Publications </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
+<h2><font face="Arial"> Publications </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
 <table id="tbPublications" width="100%">
 	<tbody>
 
@@ -157,15 +157,3 @@ ga('send', 'pageview');
     <tr></tr>
 
 
-
-<p align=right>
-   <a class="pull-right" href=" ">
-   <script type="text/javascript" id="clstr_globe" src="//clustrmaps.com/globe.js?d=sjN32DQJNg-ersu1omfeQGDEj9WdB2f6k0I6ZmtjVSI"></script></center>
-   </ a>
-</p >
-
-<p><center><font>
-        <br>&copy; LIN Dan | Last updated: Jan. 2022</font></center>
-</p >
-
-</body></html>
