--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@ ga('send', 'pageview');
 	</li>
 </ul>
 
-<h2><font face="Arial"> Publications </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
+<h2><font face="Arial"> Publications </h2> </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
 <table id="tbPublications" width="100%">
 	<tbody>
 
