--- a/index.html
+++ b/index.html
@@ -72,13 +72,13 @@ ga('send', 'pageview');
 <ul>
 
 	<li>
-		[11/2021] Our paper "Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats" has been accepted.
+		[11/2021] Our paper "Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats" has been published.
 	</li>
 	<li>
-		[09/2021] Our paper "Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa" has been accepted.
+		[09/2021] Our paper "Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa" has been published.
 	</li>
 	<li>
-		[09/2020] My undergraduate thesis project has been accepted.
+		[09/2020] My undergraduate thesis project has been published.
 	</li>
 </ul>
 
