--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@ ga('send', 'pageview');
 		[09/2021] Our paper "Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa" has been published.
 	</li>
 	<li>
-		[09/2020] My undergraduate thesis project has been published.
+		[09/2020] My undergraduate thesis project "Keratoconus Diagnosis: Validation of a Novel Parameter Set Derived from IOP-Matched Scenario" has been published.
 	</li>
 </ul>
 
