--- a/index.html
+++ b/index.html
@@ -50,6 +50,7 @@ ga('send', 'pageview');
 					co-supervised by Cornell University<br>
 					<br>
 					Email: dlinlin.1128@gmail.com
+					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]
 				</p>
 				</p>
 			</td>
@@ -82,7 +83,7 @@ ga('send', 'pageview');
 	</li>
 </ul>
 
-<h2><font face="Arial"> Publications </h2> </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
+<h2><font face="Arial"> Publications </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
 <table id="tbPublications" width="100%">
 	<tbody>
 
