--- a/index.html
+++ b/index.html
@@ -49,8 +49,9 @@ ga('send', 'pageview');
 					City University of Hong Kong <br>
 					co-supervised by Cornell University<br>
 					<br>
-					Email: dlinlin.1128@gmail.com
-					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]
+					Email: dlinlin.1128@gmail.com<br>
+					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]<br>
+					[<a href="https://lindan1128.wordpress.com/mainpage/">Note page</a>]<br>
 				</p>
 				</p>
 			</td>
