--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ ga('send', 'pageview');
 
 <h2>Biography </h2>
 <p>
-	I am currently a third-year PhD student in City University of Hong Kong,
+	I am currently a fourth-year PhD student in City University of Hong Kong,
 	co-supervised by Cornell University’s College of Veterinary Medicine.
 	Before that, I got my master's degree at The Chinese University of Hong Kong,
 	and I attained my bachelor's degree from Shenzhen University.
@@ -73,6 +73,9 @@ ga('send', 'pageview');
 	<h2>News</h2>
 <ul>
 
+	<li>
+		[01/2023] Our paper "Transformer neural network to predict and interpret pregnancy loss from activity data in Holstein dairy cows" has been published.
+	</li>
 	<li>
 		[09/2021] Our paper "Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa" has been published.
 	</li>
