--- a/index.html
+++ b/index.html
@@ -87,19 +87,6 @@ ga('send', 'pageview');
 <h2><font face="Arial"> Publications </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
 <table id="tbPublications" width="100%">
 	<tbody>
-
-	<tr>	
-		<td width="206">
-		<img src="pic/mix.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
-		</td>		
-		<td><b>Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</b> <br>
-		Qiuwen He*, Jiating Huang*, Tingting Zheng, <b>Dan Lin</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
-	        [<a href="https://academic.oup.com/femsec/article-abstract/97/12/fiab151/6430860?login=false">paper</a>]
-		</td>
-	</tr>
-	<tr></tr>
-    <tr></tr>
-    <tr></tr>
 		
 		
 	<tr>	
@@ -129,6 +116,22 @@ ga('send', 'pageview');
     <tr></tr>
     <tr></tr>
 		
+<h2><font face="Arial"> Other papers </font> [<a href="https://scholar.google.com.hk/citations?user=wgqWMcUAAAAJ&hl=en&oi=sra">Google Scholar</a>]</h2>
+<table id="tbOther papers" width="100%">
+	<tbody>
+		
+	<tr>	
+		<td width="206">
+		<img src="pic/mix.jpg" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><b>Treatment with mixed probiotics induced enhanced and diversified modulation of the gut microbiome of healthy rats</b> <br>
+		Qiuwen He*, Jiating Huang*, Tingting Zheng, <b>Dan Lin</b>, Heping Zhang, Jun Li, Zhihong Sun<br>
+	        [<a href="https://academic.oup.com/femsec/article-abstract/97/12/fiab151/6430860?login=false">paper</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
 		
 	<tr>	
 		<td width="206">
