--- a/index.html
+++ b/index.html
@@ -88,6 +88,19 @@ ga('send', 'pageview');
 <table id="tbPublications" width="100%">
 	<tbody>
 		
+	<tr>	
+		<td width="206">
+		<img src="pic/abortion.png" width="185px" height = "95	" style="box-shadow: 4px 4px 8px #888">
+		</td>		
+		<td><b>Transformer Neural Network to Predict and Interpret Pregnancy Loss from Activity Data in Holstein Dairy Cows</b> <br>
+		<b>Dan Lin*</b>, Ákos Kenéz, Jessica A.A. McArt, Jun Li<br>
+	        [<a href="https://www.sciencedirect.com/science/article/pii/S0168169923000261">paper</a>][<a href="https://github.com/lindan1128/PregnancyLoss-Prediction-Project">code</a>]
+		</td>
+	</tr>
+	<tr></tr>
+    <tr></tr>
+    <tr></tr>
+		
 		
 	<tr>	
 		<td width="206">
