--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@ ga('send', 'pageview');
 <ul>
 
 	<li>
-		[01/2023] Our paper "Transformer neural network to predict and interpret pregnancy loss from activity data in Holstein dairy cows" has been published.
+		[01/2023] Our paper "Transformer Neural Network to Predict and Interpret Pregnancy Loss from Activity Data in Holstein Dairy Cows" has been published.
 	</li>
 	<li>
 		[09/2021] Our paper "Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa" has been published.
