--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ ga('send', 'pageview');
 	co-supervised by Cornell University’s College of Veterinary Medicine.
 	Before that, I got my master's degree at The Chinese University of Hong Kong,
 	and I attained my bachelor's degree from Shenzhen University.
-	My research interests include bioinformatics, metagenome and precision livestock farming.
+	My research interest is bioinformatics, including genome and metagenome, and precision livestock farming.
 </p>
 	<h2>News</h2>
 <ul>
