--- a/index.html
+++ b/index.html
@@ -171,4 +171,9 @@ ga('send', 'pageview');
     <tr></tr>
     <tr></tr>
 
+<h2>Teaching </h2>
+<p>
+	CityU PH8001 - Computational Biology, Experimental Design and Data Science
+	CityU VM2100 - Statistics for Evidence-based Biological and Veterinary Sciences
+</p>
 
