--- a/index.html
+++ b/index.html
@@ -171,9 +171,13 @@ ga('send', 'pageview');
     <tr></tr>
     <tr></tr>
 
-<h2>Teaching </h2>
-<p>
-	CityU PH8001 - Computational Biology, Experimental Design and Data Science
-	CityU VM2100 - Statistics for Evidence-based Biological and Veterinary Sciences
-</p>
+</tbody></table>
 
+
+<h2><font> Teaching </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  CityU VM2100 - Statistics for Evidence-based Biological and Veterinary Sciences <br>
+		  CityU PH8001 - Computational Biology, Experimental Design and Data Science <br>
+	  </font> </p>
+</ul>
