--- a/index.html
+++ b/index.html
@@ -181,3 +181,32 @@ ga('send', 'pageview');
 		  CityU PH8001 - Computational Biology, Experimental Design and Data Science <br>
 	  </font> </p>
 </ul>
+
+	<h2><font> Experiences </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  Research Assistant in Shenzhen Institute of Advanced Technology, Chinese Academy of Science, 2017-2018 <br>
+	  </font> </p>
+</ul>
+
+<h2><font> Selected Honors and Awards </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  Institutional Research Tuition Scholarship, City University of Hong Kong, 2022 <br>
+		  Dean List Award, The Chinese University of Hong Kong, 2019 <br>
+          	  Outstanding Graduate, Shenzhen University, 2018 <br>
+	  </font> </p>
+</ul>
+
+<p align=right>
+	<a class="pull-right" href="#">
+	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zPFGAwps3dHeHg_L_f7k-PGV37THUtOVbgXT6ZedWOs&cl=ffffff&w=a"></script></center>
+	</a>
+</p>
+
+<p><center><font>
+        <br>&copy; Dan Lin | Last updated: Jan. 2023</font></center>
+</p>
+
+</div>
+</body></html>
