--- a/index.html
+++ b/index.html
@@ -64,8 +64,10 @@ ga('send', 'pageview');
 
 <h2>Biography </h2>
 <p>
-	I am currently a fourth-year PhD student in City University of Hong Kong,
-	co-supervised by Cornell University’s College of Veterinary Medicine.
+	I am currently a fourth-year PhD student (2019-Present) in City University of Hong Kong, 
+	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>.
+	I am also co-supervised by Cornell University’s College of Veterinary Medicine, 
+	under the supervision of <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Pof. Jessica McArt</a>.
 	Before that, I got my master's degree at The Chinese University of Hong Kong,
 	and I attained my bachelor's degree from Shenzhen University.
 	My research interest is bioinformatics, including genome and metagenome, and precision livestock farming.
@@ -205,7 +207,7 @@ ga('send', 'pageview');
 </p>
 
 <p><center><font>
-        <br>&copy; Dan Lin | Last updated: Jan. 2023</font></center>
+        <br>&copy; LIN Dan | Last updated: Jan. 2023</font></center>
 </p>
 
 </div>
