--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@ ga('send', 'pageview');
 <p>
 	I am currently a fourth-year PhD student (2019-Present) in City University of Hong Kong, 
 	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>.
-	I am also co-supervised by <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
+	I am also supervised by <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
 	Before that, I attained my bachelor's degree from Shenzhen University, and got my master's degree at The Chinese University of Hong Kong.
 	My research interest is bioinformatics, including genome and metagenome, and precision livestock farming.
 </p>
