--- a/index.html
+++ b/index.html
@@ -43,11 +43,9 @@ ga('send', 'pageview');
 					<h1><font face="Arial"> 林丹 </font></h1>
 				</h1></div>
 
-				<h3>PhD Candidate</h3>
+				<h3>PhD</h3>
 				<p>
 					Bioinformatics <br>
-					City University of Hong Kong <br>
-					co-supervised by Cornell University<br>
 					<br>
 					Email: dlinlin.1128@gmail.com<br>
 					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]<br>
@@ -64,9 +62,9 @@ ga('send', 'pageview');
 
 <h2>Biography </h2>
 <p>
-	I am currently a fourth-year PhD student (2019-Present) in City University of Hong Kong, 
-	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>.
-	I am also supervised by <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
+	I just got my PhD degree in City University of Hong Kong, 
+	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>,
+	and <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
 	Before that, I attained my bachelor's degree from Shenzhen University, and got my master's degree at The Chinese University of Hong Kong.
 	My research interest is bioinformatics, including genome and metagenome, and precision livestock farming.
 </p>
