--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@ ga('send', 'pageview');
 				</p>
 			</td>
 			<td>
-				<img src="./pic/newpic.jpeg" border="0" width="220"><br>
+				<img src="./pic/NY.jpeg" border="0" width="220"><br>
 			</td>
 		</tr><tr>
 	</tr></tbody>
