--- a/index.html
+++ b/index.html
@@ -106,7 +106,7 @@ ga('send', 'pageview');
 		</td>		
 		<td><b>Comparative Genomics Reveals Recent Adaptive Evolution in Himalayan Giant Honeybee Apis laboriosa</b> <br>
 		<b>Dan Lin*</b>, Lan Lan*, Tingting Zheng, Peng Shi, Jinshan Xu, Jun Li<br>
-	        [<a href="https://academic.oup.com/gbe/article/13/10/evab227/6380142?login=false">paper</a>][<a href="https://github.com/lindan1128/Apis-Laboriosa-Project">code</a>]
+	        [<a href="https://academic.oup.com/gbe/article/13/10/evab227/6380142?login=false">paper</a>][<a href="https://oup.silverchair-cdn.com/oup/backfile/Content_public/Journal/gbe/13/10/10.1093_gbe_evab227/1/evab227_supplementary_data.zip?Expires=1702780155&Signature=EQHmNbVRdT2tW0L2KE8DHzRZafes4Wbi~biN36tgFAyk7eqIdtmMxdsa4WaXbjIQabMrWPW4MTsG3jYw2X40jjPaVnLdk2z97VbtjBs2MFMjSiqlUN0V1LVyTVHZNcvg1a72RMHZMyCFw5hFz~rxtmolBE6mMzJqZL8IGszYKjtW~7f4y8CJAWn5SSY2jQd3GmYzF5-8Flfq3aTMU41q5OMDwxUrhJfn5xCZtX8-o0O1Ex3JWIFsa6-wzqqTmOOs~7xBTgeQpZzeNGPqMwHn2geBAHXn6ZmfgTSqhkUcsjpojaEqK~vegJHlonQ1LM5sPcrstHb3qmcilBln4o-trQ__&Key-Pair-Id=APKAIE5G5CRDK6RD3PGA">supplemental files</a>][<a href="https://github.com/lindan1128/Apis-Laboriosa-Project">code</a>]
 		</td>
 	</tr>
 	<tr></tr>
