--- a/index.html
+++ b/index.html
@@ -65,7 +65,6 @@ ga('send', 'pageview');
 	I just got my PhD degree in City University of Hong Kong, 
 	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>,
 	and <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
-	Before that, I attained my bachelor's degree from Shenzhen University, and got my master's degree at The Chinese University of Hong Kong.
 	My research interest is bioinformatics, including genome and metagenome, and precision livestock farming.
 </p>
 	<h2>News</h2>
@@ -175,15 +174,16 @@ ga('send', 'pageview');
 <h2><font> Teaching </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  CityU VM2100 - Statistics for Evidence-based Biological and Veterinary Sciences <br>
-		  CityU PH8001 - Computational Biology, Experimental Design and Data Science <br>
+		  CityU VM2100 (2024) - Confidence interval and sample size, 2h lecture <br>
+		  CityU VM2100 (2024) - Study design and Literature review, 2h lecture <br>
 	  </font> </p>
 </ul>
 
 	<h2><font> Experiences </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  Research Assistant in Shenzhen Institute of Advanced Technology, Chinese Academy of Science, 2017-2018 <br>
+		  Visiting undergraduate student in Shenzhen Institute of Advanced Technology, Chinese Academy of Science, 2017 <br>
+		  Visiting PhD student, Cornell University, Feb 2023 - June 2023
 	  </font> </p>
 </ul>
 
@@ -191,7 +191,7 @@ ga('send', 'pageview');
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
 		  Institutional Research Tuition Scholarship, City University of Hong Kong, 2022 <br>
-		  Dean List Award, The Chinese University of Hong Kong, 2019 <br>
+		  Dean's List Award, The Chinese University of Hong Kong, 2019 <br>
           	  Outstanding Graduate, Shenzhen University, 2018 <br>
 	  </font> </p>
 </ul>
