--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ ga('send', 'pageview');
 	I just got my PhD degree in City University of Hong Kong, 
 	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>,
 	and <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
-	My research interest is bioinformatics, including genome and metagenome, and precision livestock farming.
+	My research interest is bioinformatics, and precision livestock farming (in dairy farm).
 </p>
 	<h2>News</h2>
 <ul>
@@ -182,7 +182,7 @@ ga('send', 'pageview');
 	<h2><font> Experiences </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  Visiting undergraduate student in Shenzhen Institute of Advanced Technology, Chinese Academy of Science, 2017 <br>
+		  Visiting undergraduate student in Shenzhen Institute of Advanced Technology, 2017 <br>
 		  Visiting PhD student, Cornell University, Feb 2023 - June 2023
 	  </font> </p>
 </ul>
