--- a/index.html
+++ b/index.html
@@ -43,11 +43,11 @@ ga('send', 'pageview');
 					<h1><font face="Arial"> 林丹 </font></h1>
 				</h1></div>
 
-				<h3>PhD</h3>
+				<h3>Postdoctoral Research Associate at Cornell University</h3>
 				<p>
-					Bioinformatics <br>
+					Bio(Animal)-informatics <br>
 					<br>
-					Email: dlinlin.1128@gmail.com<br>
+					Email: dl862@cornell.edu<br>
 					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]<br>
 					[<a href="https://lindan1128.wordpress.com/mainpage/">Note page</a>]<br>
 				</p>
@@ -62,10 +62,7 @@ ga('send', 'pageview');
 
 <h2>Biography </h2>
 <p>
-	I just got my PhD degree in City University of Hong Kong, 
-	under the supervision of <a href="https://scholar.google.com.hk/citations?user=BaWTpXcAAAAJ&hl=en">Dr. Jun Li</a>,
-	and <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> in Cornell University’s College of Veterinary Medicine.
-	My research interest is bioinformatics, and precision livestock farming (in dairy farm).
+	I am a postdoc at Cornell University under the supervision of <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> . Our work is committed to advancing Digital Animal Health, a proactive approach to animal healthcare that aims to promote their healthier lives before diseases manifest. 
 </p>
 	<h2>News</h2>
 <ul>
@@ -182,8 +179,8 @@ ga('send', 'pageview');
 	<h2><font> Experiences </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  Visiting PhD student, Cornell University, 2023
 		  Visiting undergraduate student in Shenzhen Institute of Advanced Technology, 2017 <br>
-		  Visiting PhD student, Cornell University, Feb 2023 - June 2023
 	  </font> </p>
 </ul>
 
@@ -192,7 +189,7 @@ ga('send', 'pageview');
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
 		  Institutional Research Tuition Scholarship, City University of Hong Kong, 2022 <br>
 		  Dean's List Award, The Chinese University of Hong Kong, 2019 <br>
-          	  Outstanding Graduate, Shenzhen University, 2018 <br>
+          	  Distinguished Graduate, Shenzhen University, 2018 <br>
 	  </font> </p>
 </ul>
 
@@ -203,7 +200,7 @@ ga('send', 'pageview');
 </p>
 
 <p><center><font>
-        <br>&copy; LIN Dan | Last updated: Nov. 2023</font></center>
+        <br>&copy; LIN Dan | Last updated: Nov. 2024</font></center>
 </p>
 
 </div>
