--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@ ga('send', 'pageview');
 	<h2><font> Experiences </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  Visiting PhD student, Cornell University, 2023
+		  Visiting PhD student, Cornell University, 2023 <br>
 		  Visiting undergraduate student in Shenzhen Institute of Advanced Technology, 2017 <br>
 	  </font> </p>
 </ul>
