--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@ ga('send', 'pageview');
 		<tr>
 			<td width="650">
 				<div id="toptitle">
-					<h1>LIN Dan</h1><h1>
+					<h1>Dan Lin</h1><h1>
 					<h1><font face="Arial"> 林丹 </font></h1>
 				</h1></div>
 
