--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ ga('send', 'pageview');
 					<br>
 					Email: dl862@cornell.edu<br>
 					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]<br>
-					[<a href="https://lindan1128.wordpress.com/mainpage/">Note page</a>]<br>
+					[<a href="https://www.linkedin.com/in/dan-lin-13bb99289/">Linkedin page</a>]<br>
 				</p>
 				</p>
 			</td>
