--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@ ga('send', 'pageview');
 					Bio(Animal)-informatics <br>
 					<br>
 					Email: dl862@cornell.edu<br>
-					[<a href="https://github.com/lindan1128?tab=repositories">Github page</a>]<br>
+					[<a href="https://github.com/lindan1128">Github page</a>]<br>
 					[<a href="https://www.linkedin.com/in/dan-lin-13bb99289/">Linkedin page</a>]<br>
 				</p>
 				</p>
@@ -170,8 +170,10 @@ ga('send', 'pageview');
 <h2><font> Teaching </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  CityU VM2100 (2024) - Confidence interval and sample size, 2h lecture <br>
-		  CityU VM2100 (2024) - Study design and Literature review, 2h lecture <br>
+		  CityUHK PH8001 (2024) -  Experimental designs, 1h lecture for graduate students <br>
+		  CityUHK PH8001 (2024) -  Regression models and other machine learning models‘, 1h lecture for graduate students <br>
+		  CityUHK VM2100 (2024) - Confidence interval and sample size, 2h lecture for undergraduate students <br>
+		  CityUHK VM2100 (2024) - Study design and Literature review, 2h lecture for undergraduate students <br>
 	  </font> </p>
 </ul>
 
