--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ ga('send', 'pageview');
 					<h1>Dan Lin</h1><h1>
 				</h1></div>
 
-				<h3>Postdoctoral Research Associate at Cornell University</h3>
+				<h3>Post doc at Cornell University</h3>
 				<p>
 					Bio(Animal)-informatics <br>
 					<br>
