--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@ ga('send', 'pageview');
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
 		  CityUHK PH8001 (2024) -  Experimental designs, 1h lecture for graduate students <br>
-		  CityUHK PH8001 (2024) -  Regression models and other machine learning models‘, 1h lecture for graduate students <br>
+		  CityUHK PH8001 (2024) -  Regression models and other machine learning models, 1h lecture for graduate students <br>
 		  CityUHK VM2100 (2024) - Confidence interval and sample size, 2h lecture for undergraduate students <br>
 		  CityUHK VM2100 (2024) - Study design and Literature review, 2h lecture for undergraduate students <br>
 	  </font> </p>
