--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
 <link rel="shortcut icon" href="myIcon.ico">
 <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
 
-<meta name="keywords" content="LIN Dan, LIN Dan, Bioinformatics">
-<meta name="description" content="LIN Dan&#39;s home page">
+<meta name="keywords" content="Dan Lin, Digital Animal Health">
+<meta name="description" content="Dan Lin&#39;s home page">
 <meta name="google-site-verification" content="X2QFrl-bPeg9AdlMt4VKT9v6MJUSTCf-SrY3CvKt4Zs" />
 <link rel="stylesheet" href="jemdoc.css" type="text/css">
 <title>LIN Dan&#39;s Homepage</title>
@@ -44,7 +44,9 @@ ga('send', 'pageview');
 
 				<h3>Post doc at Cornell University</h3>
 				<p>
-					Bio(Animal)-informatics <br>
+					Ph.D., Bio(Animal)-informatics, 2023 – CityUHK <br>
+					M.S., BME, 2019 – CUHK <br>
+					B.S., BME, 2018 – SZU <br>
 					<br>
 					Email: dl862@cornell.edu<br>
 					[<a href="https://github.com/lindan1128">Github page</a>]<br>
