--- a/index.html
+++ b/index.html
@@ -203,7 +203,7 @@ ga('send', 'pageview');
 </p>
 
 <p><center><font>
-        <br>&copy; LIN Dan | Last updated: Nov. 2024</font></center>
+        <br>&copy; Dan Lin | Last updated: Nov. 2024</font></center>
 </p>
 
 </div>
