--- a/index.html
+++ b/index.html
@@ -196,10 +196,16 @@ ga('send', 'pageview');
 	  </font> </p>
 </ul>
 
-<p align=right>
+<!-- <p align=right>
 	<a class="pull-right" href="#">
 	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zPFGAwps3dHeHg_L_f7k-PGV37THUtOVbgXT6ZedWOs&cl=ffffff&w=a"></script></center>
 	</a>
+</p> -->
+
+<p align="right">
+    <a href="https://clustrmaps.com/site/1bqj9" title="Visit tracker">
+        <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zPFGAwps3dHeHg_L_f7k-PGV37THUtOVbgXT6ZedWOs&cl=ffffff&w=a"></script>
+    </a>
 </p>
 
 <p><center><font>
