--- a/index.html
+++ b/index.html
@@ -198,11 +198,11 @@ ga('send', 'pageview');
 
 <!-- <p align=right>
 	<a class="pull-right" href="#">
-	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zPFGAwps3dHeHg_L_f7k-PGV37THUtOVbgXT6ZedWOs&cl=ffffff&w=a"></script></center>
+	<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script>
+	#<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=zPFGAwps3dHeHg_L_f7k-PGV37THUtOVbgXT6ZedWOs&cl=ffffff&w=a"></script></center>
 	</a>
 </p> -->
 
-<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script>
 
 <p><center><font>
         <br>&copy; Dan Lin | Last updated: Nov. 2024</font></center>
