--- a/index.html
+++ b/index.html
@@ -203,6 +203,7 @@ ga('send', 'pageview');
 	</a>
 </p> -->
 
+<script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script>
 
 <p><center><font>
         <br>&copy; Dan Lin | Last updated: Nov. 2024</font></center>
