--- a/index.html
+++ b/index.html
@@ -39,15 +39,15 @@ ga('send', 'pageview');
 		<tr>
 			<td width="650">
 				<div id="toptitle">
-					<h1>Dan Lin</h1><h1>
+					<h1>Dan Lin 林丹 Lam Daan</h1><h1>
 				</h1></div>
 
 				<h3>Post doc at Cornell University</h3>
 				<p>
-					Ph.D., Bio(Animal)-informatics, 2024 – CityUHK <br>
+<!-- 					Ph.D., Bio(Animal)-informatics, 2024 – CityUHK <br>
 					M.S., BME, 2019 – CUHK <br>
 					B.S., BME, 2018 – SZU <br>
-					<br>
+					<br> -->
 					Email: dl862@cornell.edu<br>
 					[<a href="https://github.com/lindan1128">Github page</a>]<br>
 					[<a href="https://www.linkedin.com/in/dan-lin-13bb99289/">Linkedin page</a>]<br>
@@ -61,10 +61,32 @@ ga('send', 'pageview');
 	</tr></tbody>
 </table>
 
-<h2>Biography </h2>
+<!-- <h2>Biography </h2>
 <p>
 	I am a postdoc at Cornell University under the supervision of <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> . Our work is committed to advancing Digital Animal Health, a proactive approach to animal healthcare that aims to promote their healthier lives before diseases manifest. 
-</p>
+</p> -->
+<h2><font> Education </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  She got the Ph.D. in Bioinformatics at City University of Hong Kong under the supervision of <a href="https://www.cityu.edu.hk/ph/staff/prof-jun-li" target="_blank">Prof. Jun Li</a> and <a href="https://www.vet.cornell.edu/research/jessica-mcart-dvm-phd-dabvp-dairy-practice" target="_blank">Prof. Jessica McArt</a> in Feb 2024. <br>
+		  <br>
+		  She got the Master of Science degree, M.S. in Biomedical Engineering at The Chinese University of Hong Kong in Aug 2019. <br>
+		  <br>
+          	  She got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering at Shenzhen University under the supervision of <a href="https://bme.szu.edu.cn/info/1164/1562.htm" target="_blank">Prof. Yongjin Zhou</a> in Jun 2018. <br>
+	  </font> </p>
+</ul>
+
+<h2><font> Research Interests </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  <b>Digital animal health:</b> AI-driven early prediction of health and production events in livestock, particularly dairy cows <br>
+		  <b>Bioinformatics:</b> Comparative genomics and metagenomics to study evolution and environmental adaptation in animals, especially honeybees <br>
+		  <b>Gut microbiome:</b> Diet- and drug-driven modulation of gut microbiota in mouse models <br>
+ <br>
+	  </font> </p>
+</ul>
+	
+	
 	<h2>News</h2>
 <ul>
 
@@ -168,25 +190,43 @@ ga('send', 'pageview');
 
 </tbody></table>
 
-
 <h2><font> Teaching </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  CityUHK PH8001 (2024) -  Experimental designs, 1h lecture for graduate students <br>
-		  CityUHK PH8001 (2024) -  Regression models and other machine learning models, 1h lecture for graduate students <br>
-		  CityUHK VM2100 (2024) - Confidence interval and sample size, 2h lecture for undergraduate students <br>
-		  CityUHK VM2100 (2024) - Study design and Literature review, 2h lecture for undergraduate students <br>
+		  CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Experimental designs', 1h lecture for graduate students <br>
+		  CityUHK PH8001 (2024) - Guest Lecturer, Classroom, 'Regression models and machine learning models', 1h lecture for graduate students <br>
+		  CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Confidence interval and sample size', 2h lecture for undergraduate students <br>
+		  CityUHK VM2100 (2024) - Guest Lecturer, Classroom, 'Study design and Literature review', 2h lecture for undergraduate students <br>
+		  CityUHK VM2100 (2022-2023) - Teaching Assistant, On-Line, 'How comparative genomics and statistical analysis reveal the evolution of Apis laboriosa’ ', 20-min case study for undergraduate students <br>
 	  </font> </p>
 </ul>
 
 	<h2><font> Experiences </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
-		  Visiting PhD student, Cornell University, 2023 <br>
-		  Visiting undergraduate student in Shenzhen Institute of Advanced Technology, 2017 <br>
+		  Visiting PhD student, Cornell University, Feb 2023 – Jun 2023 <br>
+		  Research Assistant, City University of Hong Kong, Jun 2019 – Aug 2019 <br>
+		  Visiting undergraduate student, Chinese Academy of Sciences (ShenZhen), Jan 2017 – Nov 2017 <br>
 	  </font> </p>
 </ul>
 
+	<h2><font> Professional Memberships </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  American Dairy Science Association, 2023 – Present <br>
+		  American Society for Microbiology, 2025 – Present <br>
+		  Chinese Association of Animal Science and Veterinary Medicine, 2024 – Present <br>
+		  Chinese Association for Artificial Intelligence, 2024 – Present <br>
+	  </font> </p>
+</ul>
+
+<h2><font> Review Services </font></h2>
+<ul style="list-style-type:none">
+	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+		  Preventive Veterinary Medicine (1), BMC Bioinformatics (1) <br>
+	  </font> </p>
+</ul>
+	
 <h2><font> Selected Honors and Awards </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
@@ -195,6 +235,7 @@ ga('send', 'pageview');
           	  Distinguished Graduate, Shenzhen University, 2018 <br>
 	  </font> </p>
 </ul>
+
 
 <!-- <p align=right>
 	<a class="pull-right" href="#">
@@ -206,7 +247,7 @@ ga('send', 'pageview');
 <script type="text/javascript" id="clustrmaps" src="//clustrmaps.com/map_v2.js?d=TQPEFe8npaOD-qAfoU4ydKM7B2BNe3KpRAodZSRJ_Rg&cl=ffffff&w=a"></script>
 
 <p><center><font>
-        <br>&copy; Dan Lin | Last updated: Nov. 2024</font></center>
+        <br>&copy; Dan Lin | Last updated: Apr. 2025</font></center>
 </p>
 
 </div>
