--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@ ga('send', 'pageview');
 <p>
 	I am a postdoc at Cornell University under the supervision of <a href="https://www.vet.cornell.edu/research/faculty/jessica-mcart-dvm-phd-dabvp-dairy-practice">Dr. Jessica McArt</a> . Our work is committed to advancing Digital Animal Health, a proactive approach to animal healthcare that aims to promote their healthier lives before diseases manifest. 
 </p> -->
-<h2><font> Education </font></h2>
+<!-- <h2><font> Education </font></h2>
 <ul style="list-style-type:none">
 	  <p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
 		  She got the Ph.D. in Bioinformatics at City University of Hong Kong under the supervision of <a href="https://www.cityu.edu.hk/ph/staff/prof-jun-li" target="_blank">Prof. Jun Li</a> and <a href="https://www.vet.cornell.edu/research/jessica-mcart-dvm-phd-dabvp-dairy-practice" target="_blank">Prof. Jessica McArt</a> in Feb 2024. <br>
@@ -74,6 +74,14 @@ ga('send', 'pageview');
 		  <br>
           	  She got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering at Shenzhen University under the supervision of <a href="https://bme.szu.edu.cn/info/1164/1562.htm" target="_blank">Prof. Yongjin Zhou</a> in Jun 2018. <br>
 	  </font> </p>
+</ul> -->
+<h2><font> Education </font></h2>
+<ul style="list-style-type:none">
+<p style="margin-left: 0px; line-height: 150%; margin-top: 8px; margin-bottom: 8px;"><font size="3"><meta charset="utf-8">
+She got the Ph.D. in Bioinformatics at City University of Hong Kong under the supervision of <a href="https://www.cityu.edu.hk/ph/staff/prof-jun-li" target="_blank">Prof. Jun Li</a> and <a href="https://www.vet.cornell.edu/research/jessica-mcart-dvm-phd-dabvp-dairy-practice" target="_blank">Prof. Jessica McArt</a> in Feb 2024. <br>
+She got the Master of Science degree, M.S. in Biomedical Engineering at The Chinese University of Hong Kong in Aug 2019. <br>
+She got the Bachelor of Science degree, B.S. (Honored) in Biomedical Engineering at Shenzhen University under the supervision of <a href="https://bme.szu.edu.cn/info/1164/1562.htm" target="_blank">Prof. Yongjin Zhou</a> in Jun 2018. <br>
+</font></p>
 </ul>
 
 <h2><font> Research Interests </font></h2>
